--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nanoid": "^3.1.23",
     "nodemon": "^2.0.7"
   }
 }
