--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nanoid": "^3.1.23",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "pem": "^1.14.4"
   }
 }
